env: dapper and npgsql

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=fina;Username=postgres;Password=123;SslMode=Prefer;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
