--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -12,7 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Web\Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Endpoint\" />
   </ItemGroup>
 
 </Project>
