feat: minimal api, cors and swagger
Done:
- CORS
- [Swagger](https://localhost:7273/swagger/index.html)
    - Microsoft.OpenApi
    - Swashbuckle.Aspnet

--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.15" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
